@@ -241,6 +241,9 @@ NEW FEATURES
     o	sprintf() now allows zero-length arguments (with a zero-length
 	result).  (Suggestion of Bill Dunlap.)
 
+    o	unlink() is now able to remove broken symbolic links on
+	Unix-alikes.
+
 
 DEPRECATED & DEFUNCT
 
@@ -319,7 +322,7 @@ UTILITIES
     o	R CMD SHLIB now calls the makefiles with target 'all' on all
 	platforms, not just on Windows: this is only relevant when a
 	Makevars[.win] is used that contains targets (not in general
-	recommended): for backwrds compatibility the first target
+	recommended): for backwards compatibility the first target
 	should be named 'all'.
 
 
